2005-01-22 Eero Tamminen <eerot@sf>
	* src/plugins/StatisticsChart.py:
	  - Move data item options to separate tab in report GUI
	  - Each data item option can now be selected separately and
	    therefore they have separate option names
	    - Note: Generating separate Chart for data options maybe be
	      broken because I couldn't test it because of BaseDoc problems
	  - Put options with predefined values to separate class
	    (like in GraphViz.py)
	  - Add non-localized option value descriptions for CLI

2005-01-21 Eero Tamminen <eerot@sf>
	* src/plugins/GraphViz.py: Change CLI help to use non-localized
	  option descriptions

2005-01-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ReportUtils.py: added estimate_age and sanitize_person
	* src/BaseDoc.py: Add checks attempting to add styles after initializing 
	the document
	* src/docgen/OpenOfficeDoc.py: add init assertions
	* src/docgen/PSDrawDoc.py: fix line style in boxes
	* src/docgen/SvgDrawDoc.py: fix line style in boxes

2005-01-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ReportUtils.py: added documentation

2005-01-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/NameEdit.py: Fix patronymic show/save.

2005-01-18 Eero Tamminen <eerot@sf>
	* src/plugins/GraphViz.py:
	  - Content options are now on the Report tab, Layout/looks
	    options are left to GraphViz tab
	  - Remade option lists, there's now a new class that keeps them
	  - Moved lists from different places in code to the new class
	  - Added 'rankdir' option for graph direction and 'latin'
	    option for fonts (visible only on command line, in GUI
	    it's taken from selected font and set whether labels need
	    utf8->latin1 conversion)
	  - Changed 'colorize' option to support color filling in
	    addition to just outline color (nicer for on-screen docs)
	  - Changed the options defaults slightly (e.g. "Default" font
	    is now default, this is a bit contraversial)