@@ -1,3 +1,13 @@
+2005-01-23 Eero Tamminen <eerot@sf>
+	* src/plugins/StatisticsChart.py:
+	  - Complete refactoring of Extract class. There are now separate
+	    methods for Gramp type extraction and data extraction from types
+	    + db is stored to self.db.  This makes code much more flexible
+	  - Added charts for person age, death and birth places, death cause
+	  - Changed _Extract.extractors accesses accordingly
+	  - Better chart title localization (use keywords)
+	  - Fix two minor bugs in yesterday's code
+
 2005-01-22 Eero Tamminen <eerot@sf>
 	* src/plugins/StatisticsChart.py:
 	  - Move data item options to separate tab in report GUI
